gcc/testsuite/gcc.dg/noncompile/920824-1.c
/* { dg-require-effective-target gcc_frontend } */
struct s{struct s{int i;}x;};	/* { dg-error "nested redefinition" } */
